--- a/src/Components/Team/Member.module.css
+++ b/src/Components/Team/Member.module.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 @keyframes slidedown {
     0% {
-        margin-left: -30px
+        margin-top: -30px
     }
-    ;
+    
     100% {
         margin-top: 0px
     }
-    ;
+    
 }
 
 .image {
@@ -36,7 +36,7 @@
     /* border-radius: 7px; */
     /* font-family:  'Alata', sans-serif; */
     animation-name: slidedown;
-    animation-duration: 1s;
+    animation-duration: 5s;
     animation-fill-mode: backwards;
     animation-timing-function: ease;
 }
