--- a/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
+++ b/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
@@ -12,7 +12,7 @@
     to{opacity: 0;}
 }
 .hide{
-    animation: fadeout 1.5s;
+    animation: fadeout 0.75s;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
     -ms-animation-fill-mode: forwards;
@@ -56,7 +56,7 @@
     }
 }
 .vanish{
-    animation: disappear 1.5s;
+    animation: disappear 0.75s;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
     -ms-animation-fill-mode: forwards;
@@ -73,4 +73,13 @@
 }
 .darken{
     animation: darken-anim 0.5s linear;
+}
+
+.anim-overlay-logos{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
 }
