--- a/src/Components/EventsComponent/eventmodal.scss
+++ b/src/Components/EventsComponent/eventmodal.scss
@@ -1,11 +1,11 @@
 .evePage {
     .showModal1 {
         opacity: 1 !important;
-        left: 150px;
+        left: 200px;
     }
     .showModal2 {
         opacity: 1 !important;
-        right: 150px;
+        right: 200px;
     }
     .shiftRight {
         right: 150px;
@@ -14,28 +14,51 @@
         // position: relative !important;
         position: absolute !important;
         background-color: #2fb3ff;
-        color: #001e2c;
+        color: hsl(199, 100%, 9%);
+        // color: white;
         // background-color: white;
         // color: rgb(6, 51, 77);
         width: 40%;
         border-radius: 5px;
         opacity: 0;
         transition: all 0.3s;
-        box-shadow: 0px 0px 15px rgb(174, 228, 250);
+        box-shadow: 0px 0px 10px 5px rgb(12, 69, 92);
         .modalHead {
             display: flex;
-            justify-content: center;
+            margin: 20px auto;
+            width: 80%;
+            justify-content: space-evenly;
+            img {
+                width: 100px;
+                object-fit: cover;
+                object-position: center;
+                // filter: invert(1);
+            }
             h3 {
                 font-weight: 600;
                 margin-top: 15px;
                 padding: 20px;
-                padding-bottom: 0;
             }
             span {
                 position: absolute;
                 right: 20px;
                 top: 20px;
                 cursor: pointer;
+            }
+            .regNowBtn {
+                background-color: rgb(146, 9, 38);
+                height: fit-content;
+                margin: auto;
+                color: white;
+                text-align: center;
+                padding: 10px 10px;
+                border-radius: 5px;
+                box-shadow: 0 0 5px #000;
+                transition: all 0.1s;
+                &:hover {
+                    // transform: scale(1.03);
+                    background-color: rgb(206, 8, 51);
+                }
             }
         }
         hr {
@@ -44,9 +67,12 @@
             margin: auto;
         }
         .modalBody {
+            border-radius: 5px;
+            overflow: hidden;
             background-color: #001e2c;
             color: #FFF;
-            margin: 20px;
+            margin: 10px;
+            margin-top: 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -70,31 +96,33 @@
             }
             ul.tabs {
                 display: grid;
-                grid-template-columns: repeat( auto-fit, minmax(70px, 1fr));
-                grid-row-gap: 20px;
+                grid-template-columns: repeat( auto-fit, minmax(100px, 1fr));
                 align-items: center;
                 justify-content: center;
-                width: 80%;
-                margin: 40px;
+                width: 100%;
+                padding: 0 2px;
+                background: #001e2c;
                 li {
-                    // margin: 20px;
+                    margin: 3px 1px;
                     list-style: none;
                     button {
-                        border-radius: 50%;
+                        width: 100%;
                         background-color: white;
                         padding: 10px;
-                        width: 50px;
                         transition: all 0.15s;
                         display: flex;
-                        justify-content: center;
+                        justify-content: space-evenly;
                         align-items: center;
                         height: 50px;
                         i {
                             color: #001e2c;
                             font-size: 20px;
                         }
+                        p {
+                            margin: 0;
+                        }
                         &:hover {
-                            transform: scale(1.1);
+                            // transform: scale(1.1);
                         }
                     }
                 }
@@ -104,13 +132,15 @@
                 height: 250px;
                 width: 90%;
                 margin: 20px;
-                margin-top: 0;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
             }
             .activeTabButton {
-                background-color: #0a637e !important;
+                background-color: #001e2c !important;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+                color: white !important;
                 i {
                     color: white !important;
                 }
@@ -144,9 +174,17 @@
             width: 90%;
             .modalBody {
                 margin: 10px;
+                ul.tabs {
+                    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+                }
                 .info {
                     max-height: 50vh;
                     overflow-y: auto;
+                }
+                .tab-button {
+                    p {
+                        display: none;
+                    }
                 }
             }
         }
