--- a/src/Components/SignupComponent/Signup.css
+++ b/src/Components/SignupComponent/Signup.css
@@ -7,33 +7,40 @@
 */
 
 .border-md {
-    border-width: 2px;
+  border-width: 2px;
 }
 
 .btn-facebook {
-    background: #405D9D;
-    border: none;
+  background: #405d9d;
+  border: none;
+}
+.asterisk_input::after {
+  content: " *";
+  color: #e32;
+  position: absolute;
+  margin: 0px 0px 0px -20px;
+  font-size: x-large;
+  padding: 0 5px 0 0;
 }
 
 .btn-facebook:hover,
 .btn-facebook:focus {
-    background: #314879;
+  background: #314879;
 }
 
 .btn-twitter {
-    background: #42AEEC;
-    border: none;
+  background: #42aeec;
+  border: none;
 }
 
 .btn-twitter:hover,
 .btn-twitter:focus {
-    background: #1799e4;
+  background: #1799e4;
 }
 
 ::placeholder {
-    font-weight: 400;
+  font-weight: 400;
 }
-
 
 /*
 *
@@ -44,33 +51,33 @@
 */
 
 body {
-    min-height: 100vh;
-    background-color: black;
+  min-height: 100vh;
+  background-color: black;
 }
 
 .form-control:not(select) {
-    padding: 1.5rem 0.5rem;
+  padding: 1.5rem 0.5rem;
 }
 
 select.form-control {
-    height: 52px;
-    padding-left: 0.5rem;
+  height: 52px;
+  padding-left: 0.5rem;
 }
 
 .form-control::placeholder {
-    color: #ccc;
-    font-weight: bold;
-    font-size: 0.9rem;
+  color: #ccc;
+  font-weight: bold;
+  font-size: 0.9rem;
 }
 
 .form-control:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 small {
-    width: 100%;
+  width: 100%;
 }
 
 .heightFooter {
-    margin-top: 44px;
+  margin-top: 44px;
 }
