--- a/src/Components/SideEvents/sideEvent.css
+++ b/src/Components/SideEvents/sideEvent.css
@@ -1,5 +1,5 @@
 .event-card {
-  width: 40vw;
+  width: 40%;
   margin: 30px;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
   /* background: rgb(244, 232, 243);
@@ -111,7 +111,7 @@ div.event-card:hover img.side-event-logo {
     box-shadow: 0 -5px 10px 5px rgba(0, 0, 0, 0.5);
     width: inherit !important;
   }
-  .card-body {
+  .event-card .card-body {
     animation: comedown 1s ease;
   }
   .imgbox {
