--- a/src/Components/Team/newmem.css
+++ b/src/Components/Team/newmem.css
@@ -1,7 +1,23 @@
+@keyframes flip{
+    0%{
+        transform : rotateY(90deg) scale(0.85);
+    }
+ 
+    100%{
+        transform: rotateY(0deg);
+       
+    }
+
+}
+
 .our-team {
-    background: #192b42;
+    background: #bcbd9d;
     text-align: center;
     margin: 5px 10px;
+    perspective: 1000px;
+    animation: flip 1.5s ease;
+    border-radius: 5px;
+  
 }
 
 .our-team .pic {
@@ -39,6 +55,8 @@
 .our-team .pic img {
     width: 100%;
     height: auto;
+    border-radius: 5px;
+   border: 5px solid rgb(49, 55, 58);
 }
 
 .our-team .read-more {
@@ -68,9 +86,9 @@
 }
 
 .our-team .title {
-    font-size: 22px;
-    font-weight: 700;
-    color:#b3d7ff;
+    font-size: 20px;
+    font-weight: 500;
+    color:#000000;
     text-transform: capitalize;
     margin: 0 0 8px 0;
 }
