fixed logo issue & mech timing

--- a/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea20.css
+++ b/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea20.css
@@ -100,13 +100,13 @@
     animation: spin-clockwise 10s infinite;
 } */
 @keyframes left_fade{
-    0%{transform: translateX(0%) scale(1);}
-    50%{transform: translateX(-15%) scale(2);}
+    91%{transform: translateX(0%) scale(1);}
+    97%{transform: translateX(-15%) scale(2);}
     100%{transform: translateX(0%) scale(1);}
 }
 .translate_left{
     transform-origin: 51.5% 47.2%;
-    animation: left_fade 0.85s linear;
+    animation: left_fade 9s linear;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
     -ms-animation-fill-mode: forwards;
@@ -128,12 +128,12 @@
 } */
 
 @keyframes right_fade{
-    0%{transform: translateX(0%) scale(1);}
-    50%{transform: translateX(15%) scale(2);}
+    91%{transform: translateX(0%) scale(1);}
+    97%{transform: translateX(15%) scale(2);}
     100%{transform: translateX(0%) scale(1);}
 }
 .translate_right{
-    animation: right_fade 0.85s linear;
+    animation: right_fade 9s linear;
     transform-origin: 51.5% 47.2%;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
@@ -154,3 +154,57 @@
     -o-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
 } */
+@keyframes anim_ring1 {
+    0% {transform: rotate(0deg);}
+    16% {transform: rotate(120deg);}
+    33% {transform: rotate(0deg) scale(1);}
+    36% {transform: scale(0.95);}
+    39% { transform: scale(1.05); }
+    43% { transform: scale(0.95) rotate(0deg);}
+    47%{ transform: scale(0.6) rotate(0deg);}
+    67%{ transform: scale(0.6) rotate(-100deg);}
+    87%{ transform: scale(0.6) rotate(0deg);}
+    91%{transform: scale(1);}
+    97% { transform: scale(2);}
+    100% { transform: scale(0.6);}
+}
+.complete_ring1{
+    animation: anim_ring1 9s linear;
+    transform-origin: 51.5% 47.2%;
+}
+@keyframes anim_ring2 {
+    0% {transform: rotate(0deg);}
+    16% {transform: rotate(120deg);}
+    33% {transform: rotate(0deg) scale(1);}
+    36% {transform: scale(0.95);}
+    39% { transform: scale(1.05); }
+    43% { transform: scale(0.95) rotate(0deg);}
+    47%{ transform: scale(0.9) rotate(0deg);}
+    67%{ transform: scale(0.9) rotate(-100deg);}
+    87%{ transform: scale(0.9) rotate(0deg);}
+    91%{transform: scale(1);}
+    97% { transform: scale(2);}
+    100% { transform: scale(0.6);}
+}
+.complete_ring2{
+    animation: anim_ring2 9s linear;
+    transform-origin: 51.5% 47.2%;
+}
+@keyframes anim_ring3 {
+    0% {transform: rotate(0deg);}
+    16% {transform: rotate(120deg);}
+    33% {transform: rotate(0deg) scale(1);}
+    36% {transform: scale(0.95);}
+    39% { transform: scale(1.05); }
+    43% { transform: scale(0.95) rotate(0deg);}
+    47%{ transform: scale(1.55) rotate(0deg);}
+    67%{ transform: scale(1.55) rotate(-100deg);}
+    87%{ transform: scale(1.55) rotate(0deg);}
+    91%{transform: scale(1);}
+    97% { transform: scale(2);}
+    100% { transform: scale(0.6);}
+}
+.complete_ring3{
+    animation: anim_ring3 9s linear;
+    transform-origin: 51.5% 47.2%;
+}
