--- a/src/Components/Team/newmem.css
+++ b/src/Components/Team/newmem.css
@@ -1,13 +1,10 @@
-@keyframes flip{
-    0%{
-        transform : rotateY(90deg) scale(0.85);
+@keyframes flip {
+    0% {
+        transform: rotateY(90deg) scale(0.85);
     }
- 
-    100%{
+    100% {
         transform: rotateY(0deg);
-       
     }
-
 }
 
 .our-team {
@@ -17,7 +14,6 @@
     perspective: 1000px;
     animation: flip 1.5s ease;
     border-radius: 5px;
-  
 }
 
 .our-team .pic {
@@ -56,7 +52,7 @@
     width: 100%;
     height: auto;
     border-radius: 5px;
-   border: 5px solid rgb(49, 55, 58);
+    border: 5px solid rgb(49, 55, 58);
 }
 
 .our-team .read-more {
@@ -88,7 +84,7 @@
 .our-team .title {
     font-size: 20px;
     font-weight: 500;
-    color:#000000;
+    color: #000000;
     text-transform: capitalize;
     margin: 0 0 8px 0;
 }
@@ -123,8 +119,24 @@
     transition: transform .2s;
 }
 
-.read-more i{
+.read-more i {
     font-size: 25px !important;
     padding-right: 10px;
     padding-bottom: 2px;
+}
+
+.webTeamWrap {
+    margin-top: 60px;
+    position: relative;
+    background: rgb(15, 15, 15);
+    border-radius: 5px;
+}
+
+#webTeamGoBack {
+    padding: 0px 15px;
+    font-size: 35px;
+    right: 0px;
+    position: absolute;
+    border-radius: 50%;
+    z-index: 500;
 }
