--- a/src/Components/SideEvents/leaderboard.css
+++ b/src/Components/SideEvents/leaderboard.css
@@ -26,21 +26,25 @@ thead tr th {
 
 tbody tr td {
   text-align: center;
-  background-color: rgba(14, 69, 114, 0.5);
+  /* background-color: rgba(14, 69, 114, 0.5); */
+  background-color: rgba(35, 134, 196, 0.5);
   cursor: pointer;
   border: none !important;
 }
 tbody tr:hover {
-  background-color: rgb(70, 167, 223);
+  /* background-color: rgb(70, 167, 223); */
+  background-color: #55b6f3;
 }
 tr {
   margin-top: 10px;
 }
 tr:nth-child(even) {
-  background-color: rgb(5, 34, 59);
+  /* background-color: rgb(5, 34, 59); */
+  background-color: #2386c4;
 }
 tr:nth-child(even):hover {
-  background-color: rgb(70, 180, 223);
+  /* background-color: rgb(70, 180, 223); */
+  background-color: #55b6f3;
 }
 tr td:first-child {
   border-top-left-radius: 10px;
