--- a/src/Components/ContactComponent/contact.css
+++ b/src/Components/ContactComponent/contact.css
@@ -68,7 +68,7 @@
     width: 19rem;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
     /* background-color: #0a1018 !important; */
-    background-color: #192b42 !important;
+    background-color: #181818 !important;
     border: none !important;
     border-radius: 5px;
     /* font-family: 'Alata', sans-serif; */
@@ -93,7 +93,8 @@
 }
 
 .contacts .card-body {
-    background-color: #192b42;
+    /* background-color: #192b42; */
+    background-color: #181818;
     color: white;
 }
 
@@ -113,9 +114,12 @@
     margin: auto;
     margin-top: 20px;
     border-radius: 50% !important;
-    border: 2px solid #1e90ff;
+    /* border: 2px solid #1e90ff; */
+    border: 2px solid #3b94df;
     padding: 5px;
 }
+
+
 
 .address {
     color: #40497a;
